tests/parse_print/random_perturb/enum_liberated/delete-09/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/enum_liberated/delete-09/delete-09.essence Error is:
ValidatorError tests/parse_print/random_perturb/enum_liberated/delete-09/delete-09.essence:1:1:
  |
1 | lnguage Essence 1.3
  | ^^^^^^^^^^^^^^^^^^^
Skipped tokens
